<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="profile_pic">Profile Picture</string>
    <string name="dash_gap">Line</string>
    <string name="app_name">VirtualNeighbour</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_registration_screen">RegistrationScreen</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_launching_screen">LaunchingScreen</string>
    <string name="title_activity_neighborhood_type_selection_screen">NeighborhoodTypeSelectionScreen</string>
    <string name="title_activity_neighborhood_wall_screen">NeighborhoodWallScreen</string>
    <string name="title_activity_neighbors_nerby_screen">NeighborsNerbyScreen</string>
    <string name="title_activity_profile_screen">ProfileScreen</string>
    <string name="title_activity_reshare_post_screen">ResharePostScreen</string>
    <string name="title_activity_share_exp_screen">ShareExpScreen</string>
    <string name="title_activity_share_post_screen">SharePostScreen</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="img_back">Back Button</string>
    <string name="name">Name</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="zipCode">Zip Code</string>
    <string name="line">Line</string>
    <string name="facebook_signin">Signin with Facebook</string>
    <string name="twitter_signin">Signin with Twitter</string>
    <string name="linkedin_signin">Signin with Linkedin</string>
    <string name="facebook_signup">Signup with Facebook</string>
    <string name="twitter_signup">Signup with Twitter</string>
    <string name="linkedin_signup">Signup with Linkedin</string>
    <string name="next">Next</string>
    <string name="facebook_icon">Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">&lt;u>Forgot password&lt;/u></string>
    <string name="help_center">Help Center</string>
    <string name="copyright">Copyright My Virtual Neighbor</string>
    <string name="img_menu">Menu</string>
    <string name="locals_popular">How to become Locals Popular</string>
    <string name="share_exp">Share an Experience</string>
    <string name="meet_locals">Meet Locals Popular</string>
    <string name="neighbor_nearby">Neighbors Nearby</string>
    <string name="neighborhood_wall">Neighborhood Wall</string>
    <string name="my_wall">My Wall</string>
    <string name="settings">Settings</string>
    <string name="logout">LOGOUT</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="here_user_abt_urself">Here users about yourself will come</string>
    <string name="professional_skills">Professional Skills :</string>
    <string name="shared_exp_location">Shared Experience Location*:</string>
    <string name="shared_exp_location_text">Shared Experience Location : </string>
    <string name="promotional_item">Promotional Item ?</string>
    <string name="locals_within_300_yards">Locals within 300 yards(%):</string>
    <string name="locals_within_300_yards_text">Discount for locals within 300 yards : </string>
    <string name="discount_for_likes">Discount on likes : </string>
    <string name="discount_for_comments">Discount on comments : </string>
    <string name="for_like_this_item">For Like on this item(%):</string>
    <string name="for_comment_this_item">For Comment on this item(%):</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="rotate_image_text">**Rotate the image after sharing the experiance from your My wall	by clicking on More</string>
    <string name="shareText">Share</string>
    <string name="neighborhood_goal">Neighborhood Goal is to :</string>
    <string name="click_to_share">Click to share on your wall</string>
    <string name="follow_unfollow">Follow/Unfollow Locals NearBy You</string>
    <string name="list_images">wall share images</string>
    <string name="title_activity_registration_activity2">RegistrationActivity2</string>

</resources>