<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slidemenu="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/menu_panels_width"
    android:layout_height="match_parent"
    slidemenu:layout_role="primaryMenu"
    android:background="@color/right_panel_background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dash_gap_width"
        android:layout_marginTop="@dimen/margin_from_upperLayout"
        android:background="@color/editTextGapColor"
        android:contentDescription="@string/dash_gap" />

    <RelativeLayout
        android:id="@+id/layout_slide_left_panel_my_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_slide_left_panel_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/leftPanelButtonPaddingLeft"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView_slide_left_panel_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/leftPanel_margin_from_profile_pic"
            android:layout_toRightOf="@id/imageView_slide_left_panel_profile"
            android:text="Sachin Pareek"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/leftPanelButtonPaddingLeft"
            android:contentDescription="@string/next"
            android:src="@drawable/back_icon" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_slide_left_panel_neighborhood_wall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_from_upperLayout"
        android:background="@drawable/white_button_with_shade"
        android:drawableRight="@drawable/back_icon"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/leftPanelButtonPaddingLeft"
        android:paddingRight="@dimen/leftPanelButtonPaddingLeft"
        android:text="@string/neighborhood_wall"
        android:textSize="@dimen/leftPanel_text_size" />

    <Button
        android:id="@+id/button_slide_left_panel_my_wall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_button_with_shade"
        android:drawableRight="@drawable/back_icon"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/leftPanelButtonPaddingLeft"
        android:paddingRight="@dimen/leftPanelButtonPaddingLeft"
        android:text="@string/my_wall"
        android:textSize="@dimen/leftPanel_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/leftPanelButtonPaddingLeft"
        android:layout_marginTop="@dimen/leftPanelButtonPaddingLeft"
        android:text="@string/settings" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/leftPanel_margin_top_from_settings_icon"
        android:background="@drawable/white_button_with_shade"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/leftPanelButtonPaddingLeft"
        android:text="@string/logout"
        android:textSize="@dimen/leftPanel_text_size" />

</LinearLayout>