<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_layout_right_left_margin"
        android:layout_marginRight="@dimen/main_layout_right_left_margin"
        android:layout_marginTop="@dimen/margin_from_upperLayout"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_activity_share_exp_screen_camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/next"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView_activity_share_exp_screen_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imageView_activity_share_exp_screen_camera"
            android:background="@drawable/social_network_login_background_top_right"
            android:paddingBottom="@dimen/editText_email_padding_top_bottom"
            android:paddingTop="@dimen/editText_email_padding_top_bottom"
            android:text="@string/take_a_picture"
            android:textSize="@dimen/social_networks_text_size" />

        <TextView
            android:id="@+id/editText_activity_registration_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_activity_share_exp_screen_take_picture"
            android:layout_toRightOf="@id/imageView_activity_share_exp_screen_camera"
            android:background="@drawable/social_network_login_background_top_right"
            android:paddingBottom="@dimen/editText_email_padding_top_bottom"
            android:text="@string/rotate_image_text"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/rotate_image_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_layout_right_left_margin"
        android:layout_marginRight="@dimen/main_layout_right_left_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_activity_share_exp_screen_experianced_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/shared_exp_location"
            android:inputType="text"
            android:paddingBottom="@dimen/editText_email_padding_top_bottom"
            android:paddingLeft="@dimen/editText_profile_page_padding_left"
            android:paddingTop="@dimen/editText_email_padding_top_bottom"
            android:textSize="@dimen/profile_page_users_will_come_text_size" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_activity_share_exp_promotional_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/social_network_login_background_top"
                android:paddingBottom="@dimen/editText_email_padding_top_bottom"
                android:paddingLeft="@dimen/editText_profile_page_padding_left"
                android:paddingTop="@dimen/editText_email_padding_top_bottom"
                android:text="@string/promotional_item"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/profile_page_users_will_come_text_size" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_activity_share_exp_screen_locals_within_300_yards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/locals_within_300_yards"
            android:inputType="text"
            android:paddingBottom="@dimen/editText_email_padding_top_bottom"
            android:paddingLeft="@dimen/editText_profile_page_padding_left"
            android:paddingTop="@dimen/editText_email_padding_top_bottom"
            android:textSize="@dimen/profile_page_users_will_come_text_size" />

        <EditText
            android:id="@+id/editText_activity_share_exp_screen_for_like_this_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/for_like_this_item"
            android:inputType="text"
            android:paddingBottom="@dimen/editText_email_padding_top_bottom"
            android:paddingLeft="@dimen/editText_profile_page_padding_left"
            android:paddingTop="@dimen/editText_email_padding_top_bottom"
            android:textSize="@dimen/profile_page_users_will_come_text_size" />

        <EditText
            android:id="@+id/editText_activity_share_exp_screen_for_commetn_this_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/for_comment_this_item"
            android:inputType="text"
            android:paddingBottom="@dimen/editText_email_padding_top_bottom"
            android:paddingLeft="@dimen/editText_profile_page_padding_left"
            android:paddingTop="@dimen/editText_email_padding_top_bottom"
            android:textSize="@dimen/profile_page_users_will_come_text_size" />
    </LinearLayout>
    
    <Button
        android:id="@+id/button_activity_login_screen_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_layout_right_left_margin"
        android:layout_marginRight="@dimen/main_layout_right_left_margin"
        android:layout_marginTop="@dimen/margin_from_header"
        android:background="@drawable/green_button"
        android:padding="@dimen/button_text_padding"
        android:text="@string/shareText"
        android:textColor="@color/white"
        android:textSize="@dimen/login_button_text_size"
        android:textStyle="bold" />

</LinearLayout>